@@ -3,6 +3,10 @@ Date	Added
 AS OF SVN REV. 5091, WE ARE NOW USING TRUNK.  ALL UNTESTED BUGFIXES/FEATURES GO INTO TRUNK.
 IF YOU HAVE A WORKING AND TESTED BUGFIX PUT IT INTO STABLE AS WELL AS TRUNK.
 
+2007/03/23
+	* Corrected Ankle Snare/Spider Web having a 1% chance to trap rather than
+	  100%
+	* Food boosts are now dispelled on death only.
 2007/03/22
 	* Corrected setitemscript not correctly updating the item's script.
 	* Added define MAX_CHARS so you can easily mod the server to support a
